<resources>
    <string name="app_name">Shopsy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="context_menu">Context Menu</string>
    <string name="dot">.</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="updating">Updating</string>
    <string name="ok">OK</string>
     <string name="googleplus_authintication">Authenticating Please Wait...</string>
    <string name="facebookauthintication">Facebook Authentication Failed</string>
    <string name="facebook_app_id">1496774857318614</string>
    <string name="loading_preparing_data1">Preparing your shopping</string>
    <string name="loading_preparing_data2">experience</string>
    <string name="nointernet_data">No intenet connection</string>
    <string name="serverError_data">Server Problem</string>
    <string name="favpopup_text1">Sign in to save favorites</string>
    <string name="favpopup_registertext">Register</string>
    <string name="favpopup_signintext">Sign In</string>
    <string name="favpopup_googleplustext">Continue with Google</string>
    <string name="favpopup_facebooktext">Continue with FaceBook</string>
    <string name="signinpopup_text1">Sign In</string>
    <string name="signinpopup_email_hint">Email or Username</string>
    <string name="signinpopup_pwd_hint">Password</string>
    <string name="signinpopup_forgot_pwd">Forgot password?</string>
    <string name="signinpopup_account">Don\'t have an account?</string>
    <string name="signinpopup_register">Register</string>
    <string name="Forgotpopup_text1">Forgot Password</string>
    <string name="email_hint">Enter Email</string>
    <string name="forgot_submit">Submit</string>
    <string name="registerpopup_text1">Register</string>
    <string name="registerpopup_firstname_hint">First Name</string>
    <string name="registerpopup_lastname_hint">Last Name</string>
    <string name="registerpopup_email">Email</string>
    <string name="registerpopup_pwd">Password</string>
    <string name="registerpopup_confirm_pwd">Confirm Password</string>
    <string name="registerpopup_username_hint">Username</string>
    <string name="registerpopup_terms_text1">By registering,you confirm that you accept our</string>
    <string name="registerpopup_terms_text2">Terms of Use</string>
    <string name="registerpopup_terms_text3">and</string>
    <string name="registerpopup_terms_text4">Privacy Policy</string>
    <string name="registerpopup_account">Have an account?</string>
    <string name="registerpopup_signin">Sign In</string>
    <string name="drawer_list_home_label">Home</string>
    <string name="drawer_list_trending_label">Trending</string>
    <string name="drawer_list_feed_label">Activity Feed</string>
    <string name="drawer_list_conversation_label">Conversation</string>
    <string name="drawer_list_allshop_label">All Shops</string>
    <string name="drawer_list_browse_label">Browse</string>
    <string name="drawer_list_purchases_label">Purchases</string>
    <string name="drawer_list_settings_label">Settings</string>
    <string name="drawer_list_openshop_label">Open Shop</string>
    <string name="drawer_list_myshop_label">My Shop</string>
    <string name="drawer_list_signin_label">SIGNIN</string>
    <string name="signinfeeddata1">Sign in to favourite items,and</string>
    <string name="signinfeeddata2">customize your own personal feed.</string>
    <string name="takeminutefeeddata">It will just take a minute.</string>
    <string name="signinfeeddata3">Sign In</string>
    <string name="nofeeddata">No Feed Available</string>
    <string name="ideadata">Looking for ideas</string>
    <string name="seetrendingdata">See Trending items</string>
    <string name="cateroryheader_title">All Categories</string>
    <string name="label_caterory_empty">No Categories Found</string>
    <string name="subcaterory_product_filter">FILTER</string>
    <string name="subcaterory_product_sort">SORT</string>
    <string name="subcaterory_product_sort_dialog_sorting">Sorting</string>
    <string name="subcaterory_product_sort_dialog_cancel">CANCEL</string>
    <string name="subcaterory_product_sort_dialog_mostrecent">Most Recent</string>
    <string name="subcaterory_product_sort_dialog_highprice">Highest Price</string>
    <string name="subcaterory_product_sort_dialog_lowprice">Lowest Price</string>
    <string name="subcaterory_product_sort_dialog_apply">Apply</string>
    <string name="allshop_product_favourite">Favorite</string>
    <string name="allshop_product_contact">Contact</string>
    <string name="allshop_product_shopinfo">Shop Info</string>
    <string name="settings_label_account">Account</string>
    <string name="settings_label_notification">Notification</string>
    <string name="settings_label_currency">Currency</string>
    <string name="settings_label_advancesettings">Advance Settings</string>
    <string name="settings_label_logout">Logout</string>
    <string name="advance_settings_label_bandwidth">Bandwidth Mode</string>
    <string name="advance_settings_label_bandwidth_info">Load low-resoluction pictures. This will make the app load faster and use less data.</string>
    <string name="advance_settings_label_bandwidth_select">Select Bandwidth Mode</string>
    <string name="advance_settings_label_bandwidth_auto">Auto</string>
    <string name="advance_settings_label_bandwidth_high">High</string>
    <string name="advance_settings_label_bandwidth_low">Low</string>
    <string name="advance_settings_label_bandwidth_cancel">CANCEL</string>
    <string name="advance_settings_label_bandwidth_okay">Okay</string>
    <string name="search_label_hint">Search</string>
    <string name="detail_label_quantity">Quantity</string>
    <string name="detail_label_size">Size</string>
    <string name="detail_label_color">Color</string>
    <string name="detail_label_select_size">Select Size</string>
    <string name="detail_label_select_color">Select Color</string>
    <string name="detail_label_reviews">Reviews</string>
    <string name="detail_label_seeallreviews">See All Reviews</string>
    <string name="detail_label_item_overview">Item Overview</string>
    <string name="detail_label_item_details">Item Details</string>
    <string name="detail_label_shipping">Shipping and Payment</string>
    <string name="detail_label_addtocart">Add to Cart</string>
    <string name="detail_label_addedtocart">Added to Cart</string>
    <string name="detail_label_paymentmethod">Payment Methods</string>
    <string name="detail_label_shippingto">Shipping To</string>
    <string name="detail_label_cost">Cost</string>
    <string name="detail_label_withanotheritem">With Another</string>
    <string name="detail_label_readytoship">Ready to Ship in</string>
    <string name="detail_label_businessdays">business days</string>
    <string name="detail_label_policies">Policies</string>
    <string name="detail_label_visitshop">Visit Shop</string>
    <string name="detail_label_madeby_caps">MADE BY</string>
    <string name="detail_label_views">Views</string>
    <string name="detail_label_favorites">Favorites</string>
    <string name="detail_label_listedon">This item was listed on</string>
    <string name="detail_label_reviewby">Review by</string>
    <string name="detail_label_askquestion">Ask a Question</string>
    <string name="ship_label_shipping_policies_header">Shop Policies</string>
    <string name="ship_label_companyname">company name</string>
    <string name="ship_label_Welcome">Welcome</string>
    <string name="ship_label_Payment">Payment</string>
    <string name="ship_label_policyShipping">Shipping</string>
    <string name="ship_label_refund">Refunds and Exchanges</string>
    <string name="ship_label_additionalinfo">Additional Information</string>
    <string name="ship_label_sellerinfo">Seller Information</string>
    <string name="seeall_review_label_header_itemreview">Item Reviews</string>
    <string name="seeall_review_label_review">Reviews</string>
    <string name="cart_label_readytoship">Ready to ship in:</string>
    <string name="cart_label_itemtotal">Item Total</string>
    <string name="cart_label_shipping">Shipping</string>
    <string name="cart_label_ordertotal">Order Total</string>
    <string name="cart_label_checkout">CHECK OUT</string>
    <string name="cart_label_howyou_will_pay">How You\'ll Pay</string>
    <string name="cart_label_addcoupon_code">Add a coupon code</string>
    <string name="cart_label_add_note">Add optional note to seller</string>
    <string name="cart_label_quantity">Quantity</string>
    <string name="label_cart_empty">Cart is Empty</string>
    <string name="cart_label_dialog_text">Remove this item from cart?</string>
    <string name="cart_label_dialog_shopdelete">Remove this shop and all items from cart?</string>
    <string name="cart_label_dialog_no">No</string>
    <string name="cart_label_dialog_yes">Yes</string>
    <string name="cart_label_header">Your Cart</string>
    <string name="cart_label_coupon_insert">Insert Coupon Code</string>
    <string name="cart_label_coupon_apply">Apply</string>
    <string name="cart_label_coupon_cancel">Cancel</string>
    <string name="cart_label_coupon_remove">Remove</string>
    <string name="cart_label_menu_removeitem">Remove Items</string>
    <string name="cart_label_menu_visitshop">Visit Shop</string>
    <string name="payment_dialog_text">Pressing back would cancel your current transcation.Proceed anyway ?</string>
    <string name="label_conversation_empty">No Conversation Available</string>
    <string name="label_conversation_morereplies">more replies</string>
    <string name="chat_popup_label_title">New conversation with</string>
    <string name="chat_popup_label_subject">Subject</string>
    <string name="chat_popup_label_message">Message</string>
    <string name="chat_popup_label_send">Send</string>
    <string name="chat_popup_label_sending">Sending...</string>
    <string name="chat_popup_label_send_successfully">Sent Successfully</string>
    <string name="openshop_label_dashboard">Dashboard</string>
    <string name="activiy_tab_noActivity_label">You don\'t have any activity yet</string>
    <string name="activiy_tab_youritem_label">Your Items</string>
    <string name="activiy_tab_addproducts_label">Add Products</string>
    <string name="activiy_tab_reviews_label">Reviews</string>
    <string name="activiy_tab_orders_label">Orders</string>
    <string name="activiy_tab_dispute_label">Dispute</string>
    <string name="activiy_tab_conversation_label">Conversation</string>
    <string name="stats_label_thisMonth">This Month</string>
    <string name="stats_label_today">Today</string>
    <string name="stats_label_last7days">Last 7 days</string>
    <string name="stats_label_week">Week</string>
    <string name="stats_label_last30days">Last 30 days</string>
    <string name="stats_label_viewall">View All</string>
    <string name="stats_label_tax">Tax</string>
    <string name="stats_label_favorites">Favorites</string>
    <string name="stats_label_revenue">Revenue</string>
    <string name="stats_label_orders">Orders</string>
    <string name="stats_label_empty_novalue">---</string>
    <string name="stats_label_loading">Please Wait....</string>
    <string name="label_report_dialog_reviews">Report this review</string>
    <string name="label_report_dialog_report">Report</string>
    <string name="label_report_dialog_message">Type your message here</string>
    <string name="price">Price</string>
    <string name="doublequotes">""</string>
    <string name="done">Done</string>
    <string name="signn">USD</string>
    <string name="matlobr">Materials + Labor + Expenses + Profit = Item Price</string>
</resources>