<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cdcdcd"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_popup_tittle_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/price"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/textView__price_done"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginRight="15dp"
                    android:text="@string/done"
                    android:textColor="#14b6b9"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="61dp"
                android:background="#ffffff"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_edittextbelow_itemtitle_price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@+id/editText_popup__price"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/signn"
                    android:textColor="#14b6b9"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText_popup__price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/textView_edittextbelow_itemtitle_price1"
                    android:ems="10" 
                    android:inputType="numberDecimal">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView_edittextbelow_itemtitle_price_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_popup__price"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/matlobr"
                    android:textColor="#14b6b9"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_edittextbelow_itemtitle_price_dummy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView_edittextbelow_itemtitle_price_detail"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/doublequotes"
                    android:textColor="#14b6b9"
                    android:textSize="19sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>